# pingxx-proxy-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240608152453_add_app_and_channel/: migration.sql
prisma/migrations/20240608162325_add_order/: migration.sql
prisma/migrations/20240608171829_add_order/: migration.sql
prisma/migrations/20240609054622_add_charge/: migration.sql
prisma/migrations/20240609083904_change_notify_data_to_text/: migration.sql
prisma/migrations/20240616152238_initial/: migration.sql
prisma/migrations/20240623031900_create_refund/: migration.sql
prisma/migrations/20240623053137_change_failure_msg_to_text/: migration.sql
prisma/migrations/20240623114042_add_refund_id_to_notify_history/: migration.sql
prisma/migrations/20240629203758_initial/: migration.sql
prisma/migrations/20240701091229_add_fields_on_charge_and_refund/: migration.sql
prisma/migrations/20240702173308_order_is_nullable/: migration.sql
prisma/migrations/20240702174220_add_appid_on_charge_and_refund/: migration.sql
prisma/migrations/20240703083307_add_more_fields_on_charge/: migration.sql
prisma/migrations/20240704040423_initial/: migration.sql
prisma/migrations/20240706064704_add_webhook_history/: migration.sql
prisma/migrations/20240706073517_add_webhook_history/: migration.sql
src/: main.rs  utils.rs
src/alipay/: alipay_pc_direct.rs  alipay_wap.rs  mapi.rs  mod.rs  openapi.rs
src/charges/: charge.rs  mod.rs  notify.rs  order.rs  routes.rs
src/charges/alipay/: alipay_pc_direct.rs  alipay_wap.rs  config.rs  mapi.rs  mod.rs  openapi.rs
src/charges/wechat/: README.md  config.rs  mod.rs  v2api.rs  wx_pub.rs
src/charges/weixin/: config.rs  mod.rs  v2api.rs  wx_pub.rs
src/core/: channel.rs  error.rs  mod.rs  request.rs  response.rs
src/orders/: mod.rs
src/routes/: charge.rs  mod.rs  notify.rs  order.rs  prelude.rs  refund.rs  sub_app.rs
src/routes/basic/: charge.rs  mod.rs  refund.rs
src/routes/notify/: mod.rs  notify.rs  webhook.rs
src/routes/order/: charge.rs  mod.rs  (+2 more)
src/weixin/: mod.rs  v2api.rs  wx_lite.rs  wx_pub.rs
(+2 files in other folders)
