[workspace]
members = ["prisma-cli"]

[package]
name = "pingxx-proxy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
chrono = "0.4.38"
data-encoding = "2.6.0"
dotenvy = "0.15.7"
openssl = "0.10.64"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
prisma-client-rust = { workspace = true }
prisma-client-rust-cli = { workspace = true }
percent-encoding = "2.3.1"
reqwest = { version = "0.12.4", features = ["json"] }
md5 = "0.7.0"
quick-xml = { version = "0.32.0", features = ["serialize"] }
thiserror = "1.0.61"
async-trait = "0.1.80"

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
    "migrations",
    "mysql",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
    "migrations",
    "mysql",
], default-features = false }
