[package]
name = "prisma-cli"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.203" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
